--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <div class="landing-container">
         <div class="col">
-            <img class="img-responsive full-img" src="./Images/mila22.jpg" />
+            <img class="img-responsive full-img" src="images/mila22.jpg" />
         </div>
     </div>
 
@@ -266,27 +266,27 @@
             var vm = this;
             vm.images = [
                 {
-                    name: './images/localshows-mockup.jpg',
+                    name: 'images/localshows-mockup.jpg',
                     details: 'Work in progress. Web application for underground upcoming artists to announce local events.',
                 },
                 {
-                    name: './Images/kvite-googlemaps.jpg',
-                    details: 'Project: KVite' + "</br>" + "Integrated maps using Google Maps API.",
+                    name: 'images/kvite-googlemaps.jpg',
+                    details: "Project: KVite Integrated maps using Google Maps API.",
                 },
                 {
-                    name: './Images/daftpunk-cdmockup.jpg',
+                    name: 'images/daftpunk-cdmockup.jpg',
                     details: 'Mock up ad design for OPI.',
                 },
                 {
-                    name: './Images/dafpunk-poster.jpg',
+                    name: 'images/dafpunk-poster.jpg',
                     details: 'Mock up poster for Daft Punk',
                 },
                 {
-                    name: './Images/american-psycho-illustration.jpg',
+                    name: 'images/american-psycho-illustration.jpg',
                     details: 'Some Nicky Details',
                 },
                 {
-                    name: './Images/galleria-mockup.jpg',
+                    name: 'images/galleria-mockup.jpg',
                     details: 'Some Nicky Details',
                 }
                 //{
