--- a/index.html
+++ b/index.html
@@ -147,21 +147,22 @@
             text-align: center;
             font-size: 1.250em;
             padding: 50px 0px;
+            text-transform: none;
         }
 
         .fa-github {
             padding: 0px 15px;
         }
 
-        /*FLEX*/
-        /*.flex-grid {
-            display: flex;
-            background-color: pink;
-        }*/
+        .hire-me {
+            padding-right: 15px;
+        }
 
-        /*.flex-grid .col {
-            flex: 1;
-        }*/
+        .logo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 
 
@@ -171,10 +172,12 @@
     <!-- Nav Bar -->
     <nav class="navbar center navbar-fixed-top nav" role="navigation">
         <div class="container">
-            <!--<h4>Erika Merced</h4>-->
+
             <div class="navbar-header">
+                <!--<img src="assets/logo.png" class="img-responsive" alt="" style="width:80px;" />-->
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
+
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -182,9 +185,11 @@
                 <!--<a class="navbar-brand" href="#">Project name</a>-->
             </div>
             <div id="navbar" class="navbar-collapse collapse navbar-inner">
-                <!--<div class="navbar-header">
-                    <a class="navbar-brand" href="#">EM</a>
-                </div>-->
+                <div class="navbar-header">
+                    <div class="logo">
+                        <img src="assets/logo.png" class="img-responsive" alt="" style="width:80px;" />
+                    </div>
+                </div>
                 <ul class="nav navbar-nav">
                     <!--<li class=""><a href="">EM</a></li>-->
                     <li class=""><a href="#">Web</a></li>
@@ -197,7 +202,7 @@
 
     <div class="landing-container">
         <div class="col">
-            <img class="img-responsive full-img" src="assets/mila22.jpg" />
+            <img class="img-responsive full-img" src="assets/mila.jpg" />
         </div>
     </div>
 
@@ -224,7 +229,8 @@
     </div>
 
     <div class="social-medial-container">
-        <span>Hire me! </span><i class="fa fa-envelope" aria-hidden="true"></i>
+        <strong class="hire-me">Hire Me  </strong>
+        <i class="fa fa-envelope" aria-hidden="true"></i>
         <a href="http://github.com/mercederika"><i class="fa fa-github" aria-hidden="true"></i></a>
         <a href="https://www.linkedin.com/in/mercederika"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     </div>
