--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
         @media only screen and (max-width: 768px) {
             .navbar {
                 padding-top: 0px;
+                padding-bottom: 0px;
             }
 
             .image-container {
                 padding-top: 0px !important;
             }
+             /*.landing-container {
+                 padding-top: 50px;
+             }*/
         }
 
         .icon-bar {
@@ -61,6 +65,7 @@
 
         .image-container {
             padding-top: 7.5em;
+            text-transform: none;
         }
 
         .full-img {
@@ -131,6 +136,10 @@
             padding: 10px 10px;
         }
 
+        .modal-footer {
+            text-transform: none;
+        }
+
         * {
             border-radius: 0 !important;
         }
@@ -163,6 +172,8 @@
             justify-content: center;
             align-items: center;
         }
+
+        
     </style>
 
 
@@ -172,9 +183,8 @@
     <!-- Nav Bar -->
     <nav class="navbar center navbar-fixed-top nav" role="navigation">
         <div class="container">
-
             <div class="navbar-header">
-                <!--<img src="assets/logo.png" class="img-responsive" alt="" style="width:80px;" />-->
+                
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
 
@@ -182,16 +192,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <!--<img src="assets/logo.png" class="img-responsive" alt="" style="width:40px;" />-->
                 <!--<a class="navbar-brand" href="#">Project name</a>-->
             </div>
             <div id="navbar" class="navbar-collapse collapse navbar-inner">
                 <div class="navbar-header">
                     <div class="logo">
-                        <img src="assets/logo.png" class="img-responsive" alt="" style="width:80px;" />
+                        <img src="assets/logo.png" class="img-responsive" alt="" style="width:55px;" />
                     </div>
                 </div>
                 <ul class="nav navbar-nav">
-                    <!--<li class=""><a href="">EM</a></li>-->
                     <li class=""><a href="#">Web</a></li>
                     <li class=""><a href="#">Other</a></li>
                     <li class=""><a href="#">Contact</a></li>
@@ -277,11 +287,11 @@
                 },
                 {
                     name: 'assets/kvite-googlemaps.jpg',
-                    details: "Project: KVite Integrated maps using Google Maps API.",
+                    details: "Integrated maps using Google Maps API for KVite",
                 },
                 {
                     name: 'assets/daftpunk-cdmockup.jpg',
-                    details: 'Mock up ad design for OPI.',
+                    details: 'Mock up cd design for Daft Punk',
                 },
                 {
                     name: 'assets/dafpunk-poster.jpg',
@@ -289,11 +299,11 @@
                 },
                 {
                     name: 'assets/american-psycho-illustration.jpg',
-                    details: 'Some Nicky Details',
+                    details: 'Illustration of American Psycho done in Adobe Illustrator and Photoshop.',
                 },
                 {
                     name: 'assets/galleria-mockup.jpg',
-                    details: 'Some Nicky Details',
+                    details: 'Mock up of gallery showing for Glasglow sisters.',
                 }
                 //{
                 //    name: 'http://www.aaaapts.com/aptimages/3119/3119-S%20(700x525).jpg',
